# solomon

./: .gitignore  CLAUDE.md  ETHAN_SPEC.md  ETHAN_SPEC_CLAUDE.md  LICENSE.md  LefschetzDisk.ipynb  README.md  cli.py  elliptic-groups.gap  five_three.gap  profile_solomon.py  pyproject.toml  run_jupyter  sp4_torsion_work.py
JupyterScratchpad/: BasicTesting-Copy1.ipynb  BasicTesting.ipynb  Untitled.ipynb
PaperComputations/: br_3_4_5_groups.gap  finite_order_matrix_trace.sage  lib.sage  the_special_pants.sage
UniversalBraidsComputations/: LefschetzDisk.py  br4_core_index.sage  compute_fin_generators.sage  finite_orbits.sage
gap-computations/: 6-ababaa-group.gap  6out-testing.gap  b3_rep_comp.gap  burau-comp-mod3.gap  burau-comp.gap  describe-psl2-branching.gap  elliptic-groups.gap  five_three.gap  genus2-groups.gap  meow.gap
profile_output/: alternating_3.prof  alternating_4.prof  hyper_ell_g2_k3.prof  hyper_ell_g2_k4.prof
solomons_desk/: README.md  ethan.py  stab_example1.g  workspace.ipynb
src/solomon/: examples.py  modular.py  monodromy_rep.py  orbit_graph.py  surface_group.py  utils.py
tests/: test_ethan.py  test_orbits.py
